--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile "com.android.support:appcompat-v7:$supportVersion"
     testCompile 'junit:junit:4.12'
-    compile project(':validationutil')
+    compile 'com.github.BondolTuon:ValidationUtil:1.0.1'
 }
