Update Min sdk to version 14

--- a/validationutil/build.gradle
+++ b/validationutil/build.gradle
@@ -3,10 +3,10 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "$buildToolsVersionCode"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
