--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "$buildToolsVersionCode"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.tuonbondol.validation"
         minSdkVersion 21
